# callisto.binder.net

./: .gitignore  callisto.binder.net.sln
callisto.binder.net/: CppBinder.cs  EntryPointSearchProvider.cs  IEntryPointSearcher.cs  ILibraryPacks.cs  ILoadedLibrary.cs  LibraryPack.cs  WrapperInitializer.cs  callisto.binder.net.csproj
callisto.binder.net.cshow/: NativeClass.cs  NativeExampleLib.cs  NativeExampleLib2.cs  NativeWrap.cs  Point3fClass.cs  Program.cs  callisto.binder.net.cshow.csproj  postbuild.cmd
callisto.binder.net.show/: NativeClass.cs  NativeExampleLib.cs  NativeExampleLib2.cs  NativeWrap.cs  Point3fClass.cs  Program.cs  callisto.binder.net.cppshow.csproj  callisto.binder.net.show.csproj  postbuild.cmd
callisto.binder.net/Auxiliary/: Demangle.cs  EncondingAuxiliary.cs  EnvironmentAuxiliary.cs  Verify.cs
callisto.binder.net/Data/: FunctionEntryName.cs  RTLD.cs  UnixLibRecord.cs  UnixListDependencies.cs  WinLibRecord.cs  WinListDependencies.cs
callisto.binder.net/Data/Enum/: BitDesign.cs  HardArchitecture.cs  OSName.cs  PlatformArch.cs  RTLD.cs
callisto.binder.net/Windows/: WinEntryPointSearcher.cs  WinLoadedLibrary.cs
callisto.binder.net/Windows/Bindings/: ImageHlpWrapper.cs  Kernel32Wrapper.cs
callisto.binder.net/Windows/Data/: DefineImageConstants.cs  ImageDataDirectory.cs  ImageExportDirectory.cs  ImageFileHeader.cs  ImageOptionalHeader32.cs  ImageOptionalHeader64.cs  ListEntry.cs  LoadedImage.cs  UndName.cs
native.c.example.lib/: CMakeLists.txt
native.c.example.lib/include/: Funcs.h  FuncsLib.h  FuncsNativeWrap.h  data.h  lib_export.h  types.h
native.c.example.lib/include/Funcs/: FuncsLib.h  FuncsNativeWrap.h
native.c.example.lib/include/Funcs/NativeWrapNested/: FuncsNativeClass.h
native.c.example.lib/include/Funcs/NativeWrapNested/NativeClassNested/: FuncsPoint3fClass.h
native.c.example.lib/include/NativeWrapNested/: FuncsNativeClass.h
native.c.example.lib/src/Funcs/: FuncsLib.cpp  FuncsNativeWrap.cpp
native.c.example.lib/src/Funcs/NativeWrapNested/: FuncsNativeClass.cpp
native.c.example.lib/src/Funcs/NativeWrapNested/NativeClassNested/: FuncsPoint3fClass.cpp
native.cpp.example.lib/: CMakeLists.txt
native.cpp.example.lib/src/: funcs.cpp
native.example.lib/: CMakeLists.txt
native.example.lib/include/: funcs.hpp
